<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.automation</groupId>

	<artifactId>28032025</artifactId>

	<version>0.0.1-SNAPSHOT </version>

	<properties>

		<tags></tags>

	</properties>


	<dependencies>

		<!-- https://mvnrepository.com/artifact/au.com.bytecode/opencsv -->
		<dependency>
			<groupId>au.com.bytecode</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.4</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->

		<dependency>

			<groupId>com.opencsv</groupId>

			<artifactId>opencsv</artifactId>

			<version>4.1</version>

		</dependency>


		<dependency>

			<groupId>org.seleniumhq.selenium</groupId>

			<artifactId>selenium-java</artifactId>

			<version>3.11.0</version>

		</dependency>

		<dependency>

			<groupId>commons-io</groupId>

			<artifactId>commons-io</artifactId>

			<version>2.6</version>

		</dependency>

		<dependency>

			<groupId>org.apache.commons</groupId>

			<artifactId>commons-lang3</artifactId>

			<version>3.7</version>

		</dependency>

		<dependency>

			<groupId>info.cukes</groupId>

			<artifactId>cucumber-java</artifactId>

			<version>1.2.5</version>

		</dependency>

		<dependency>

			<groupId>info.cukes</groupId>

			<artifactId>cucumber-testng</artifactId>

			<version>1.2.5</version>

		</dependency>


		<dependency>

			<groupId>org.apache.commons</groupId>

			<artifactId>commons-csv</artifactId>

			<version>1.3</version>

		</dependency>


		<dependency>

			<groupId>org.apache.poi</groupId>

			<artifactId>poi-ooxml</artifactId>

			<version>3.16</version>

		</dependency>


		<dependency>

			<groupId>com.aventstack</groupId>

			<artifactId>extentreports</artifactId>

			<version>3.1.2</version>

		</dependency>


		<dependency>

			<groupId>com.vimalselvam</groupId>

			<artifactId>cucumber-extentsreport</artifactId>

			<version>3.0.2</version>

		</dependency>


		<dependency>

			<groupId>com.relevantcodes</groupId>

			<artifactId>extentreports</artifactId>

			<version>2.41.2</version>

		</dependency>


		<dependency>

			<groupId>org.apache.pdfbox</groupId>

			<artifactId>pdfbox</artifactId>

			<version>2.0.8</version>

		</dependency>


		<dependency>

			<groupId>javax.mail</groupId>

			<artifactId>mail</artifactId>

			<version>1.4</version>

		</dependency>
		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20171018</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.0.7</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-path</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.2.3</version>
		</dependency>


		<!--  <dependency> <groupId>com.oracle</groupId>
		<artifactId>ojdbc7</artifactId> 
			<version>12.1.0</version> </dependency>  -->

	</dependencies>

	<build>

		<plugins>

			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-compiler-plugin</artifactId>

				<version>3.7.0</version>

				<configuration>

					<source>1.8</source>

					<target>1.8</target>

				</configuration>

			</plugin>

			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-surefire-plugin</artifactId>

				<version>2.21.0</version>

				<configuration>

					<includes>

						<include>**/RegressionRunner.java</include>

					</includes>


					<argLine>


					</argLine>


				</configuration>

			</plugin>

		</plugins>

	</build>

</project>
